--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,9 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.api
+      platforms:
+        - linux/amd64
+        - linux/arm64
     image: cscan/api:latest
     container_name: cscan_api
     environment:
@@ -57,6 +60,9 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.rpc
+      platforms:
+        - linux/amd64
+        - linux/arm64
     image: cscan/rpc:latest
     container_name: cscan_rpc
     environment:
@@ -76,6 +82,9 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.worker
+      platforms:
+        - linux/amd64
+        - linux/arm64
     image: cscan/worker:latest
     environment:
       - SERVER_ADDR=cscan-rpc:9000
@@ -93,6 +102,9 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
+      platforms:
+        - linux/amd64
+        - linux/arm64
     image: cscan/web:latest
     container_name: cscan_web
     ports:
