--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -13,8 +13,9 @@ RUN go mod download
 # 复制源代码
 COPY . .
 
-# 编译 API 服务
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o /cscan-api ./api/cscan.go
+# 编译 API 服务 - 支持多架构
+ARG TARGETARCH
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -ldflags="-s -w" -o /cscan-api ./api/cscan.go
 
 # 运行镜像
 FROM alpine:3.18
@@ -24,10 +25,11 @@ WORKDIR /app
 # 安装证书和依赖
 RUN apk add --no-cache ca-certificates tzdata unzip
 
-# 从本地 poc 目录复制 nuclei 安装包并安装
-COPY poc/nuclei_3.6.1_linux_amd64.zip /tmp/
-RUN unzip /tmp/nuclei_3.6.1_linux_amd64.zip -d /tmp/ \
-    && mv /tmp/nuclei_3.6.1_linux_amd64/nuclei /usr/local/bin/ \
+# 根据架构选择对应的 nuclei 安装包
+ARG TARGETARCH
+COPY poc/nuclei_3.6.1_linux_${TARGETARCH}.zip /tmp/
+RUN unzip /tmp/nuclei_3.6.1_linux_${TARGETARCH}.zip -d /tmp/ \
+    && mv /tmp/nuclei_3.6.1_linux_${TARGETARCH}/nuclei /usr/local/bin/ \
     && rm -rf /tmp/nuclei* \
     && chmod +x /usr/local/bin/nuclei
 
