更新arm平台部署

--- a/docker/Dockerfile.rpc
+++ b/docker/Dockerfile.rpc
@@ -1,5 +1,12 @@
 # CSCAN RPC 服务 Dockerfile
+
+# 声明全局构建参数
+ARG TARGETARCH
+
 FROM golang:1.24-alpine AS builder
+
+# 重新声明参数（多阶段构建需要）
+ARG TARGETARCH
 
 WORKDIR /app
 
@@ -14,7 +21,6 @@ RUN go mod download
 COPY . .
 
 # 编译 RPC 服务 - 支持多架构
-ARG TARGETARCH
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -ldflags="-s -w" -o /cscan-rpc ./rpc/task/task.go
 
 # 运行镜像
