--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,5 +1,12 @@
 # CSCAN API 服务 Dockerfile
+
+# 声明全局构建参数
+ARG TARGETARCH
+
 FROM golang:1.24-alpine AS builder
+
+# 重新声明参数（多阶段构建需要）
+ARG TARGETARCH
 
 WORKDIR /app
 
@@ -14,22 +21,27 @@ RUN go mod download
 COPY . .
 
 # 编译 API 服务 - 支持多架构
-ARG TARGETARCH
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -ldflags="-s -w" -o /cscan-api ./api/cscan.go
 
 # 运行镜像
 FROM alpine:3.18
+
+# 重新声明构建参数
+ARG TARGETARCH
 
 WORKDIR /app
 
 # 安装证书和依赖
 RUN apk add --no-cache ca-certificates tzdata unzip
 
+# 调试输出
+RUN echo "Target architecture: ${TARGETARCH}"
+
 # 根据架构选择对应的 nuclei 安装包
-ARG TARGETARCH
-COPY poc/nuclei_3.6.1_linux_${TARGETARCH}.zip /tmp/
-RUN unzip /tmp/nuclei_3.6.1_linux_${TARGETARCH}.zip -d /tmp/ \
-    && mv /tmp/nuclei_3.6.1_linux_${TARGETARCH}/nuclei /usr/local/bin/ \
+COPY poc/nuclei_3.6.1_linux_${TARGETARCH}.zip /tmp/nuclei.zip
+RUN echo "Building for architecture: ${TARGETARCH}" \
+    && unzip /tmp/nuclei.zip -d /tmp/ \
+    && find /tmp -name "nuclei" -type f -exec mv {} /usr/local/bin/ \; \
     && rm -rf /tmp/nuclei* \
     && chmod +x /usr/local/bin/nuclei
 
